<resources>
    <string name="require_restart_app">Need To Restart The Application To Take Effect</string>
    <string name="format_hh_mm">%02D:%02D</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_not_now">Talk Back</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_dontshow">Do Not Show Again</string>
    <string name="btn_confirm">Sure</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_modify_confirm">Confirm The Changes</string>
    <string name="btn_help">Help</string>
    <string name="btn_iknow">Got It</string>
    <string name="btn_exit">Quit</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_resume">Recover</string>
    <string name="btn_skip">Jump Over</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_apply">Application</string>
    <string name="btn_reboot">Reboot</string>
    <string name="btn_resume_selected">Restore Selection</string>
    <string name="error_su_timeout">The Wait Timed Out, Make Sure Your Root Manager Is Running In The Background And Try Again! \N\Nplease Make Sure That You Do Not Prevent The "Authorization Manager (Supersu, Magisk Manager, Etc.)" From Starting Automatically, And Allow Permissions Such As Background Pop-Up Windows, Display Floating Windows, Etc. If The Authorization Dialog Box Has Not Popped Up, It Is Recommended To Restart The Phone And Try Again! \N</string>
    <string name="error_root">Sorry, I Didn'T Get Root Permission</string>
    <string name="error_root_desc">Without Root Permissions, Many Features Will Be Lost. \Nif You Missed The Authorization Prompt, Or Did Not See The Pop-Up Window, Please Find Your Root Manager And Manually Set To Allow Scene To Use Root Permissions~</string>
    <string name="question_install_busybox">Install Busybox?</string>
    <string name="question_install_busybox_desc">It Seems That Busybox Is Not Installed On Your Phone, Which Will Make Scene Unusable. Do You Want To Install It Now (Need To Modify System)?</string>
    <string name="share_link">You Can Also Try Scene, I Think It'S Pretty Good, Download Address:\N Http://Vtools.Omarea.Com/</string>
    <string name="app_name">Scene4</string>
    <string name="app_name_short">Scene4</string>
    <string name="app_name_mode_switch">Scene - Quick Switch Mode</string>
    <string name="accessibility_service_description">Scene Enhancement Service\Nyou Need To Activate This Service To Use The Following Features:\N\N1. Dynamic Response (Automatically Adjust Performance According To Foreground Applications).\N\N2. Automatic Behavior (When Switching Networks Or Switching Applications When Switching The Screen Recycling Process).\N\N3. Automatic Installation (Automatically Click Next When Installing Third-Party Applications)</string>
    <string name="backup_action_title_boot">Export Boot</string>
    <string name="backup_action_desc_boot">Backup The Currently Used Boot As Img And Copy It To /Sdcard/Boot.Img</string>
    <string name="restore_action_title_boot">Flash Into Boot</string>
    <string name="restore_action_desc_boot">Choose To Flash Boot.Img</string>
    <string name="backup_action_title_rec">Export Recovery</string>
    <string name="backup_action_desc_rec">Backup The Currently Used Export Recovery As Img And Copy It To /Sdcard/Recovery.Img</string>
    <string name="restore_action_title_rec">Flash Into Recovery</string>
    <string name="restore_action_desc_rec">Choose To Flash Recovery.Img</string>
    <string name="backup_action_title_dtbo">Export Dtbo Partition</string>
    <string name="backup_action_desc_dtbo">Export The Dtbo Partition As An Img Image And Copy It To /Sdcard/Dtbo.Img</string>
    <string name="restore_action_title_dtbo">Flash Into Dtbo Image</string>
    <string name="restore_action_desc_dtbo">Choose To Flash Dtbo.Img</string>
    <string name="backup_action_title_persist">Export Persist Partition</string>
    <string name="backup_action_desc_persist">Export The Persist Partition As An Img Image And Copy It To /Sdcard/Persist.Img</string>
    <string name="restore_action_title_persist">Flash The Persist Image</string>
    <string name="restore_action_desc_persist">Select To Flash Persist.Img</string>
    <string name="backup_file_exists">Overwrite Files?</string>
    <string name="backup_img_exists">/Sdcard/%S.Img Already Exists, Do You Want To Overwrite The Existing File? \N</string>
    <string name="backup_space_small">Insufficient Storage Space, Please Reserve At Least 200M Free Space!</string>
    <string name="autobooster_tab_details">Blacklist Settings</string>
    <string name="autobooster_tab_system_scene">System Scene</string>
    <string name="auto_clear_ignore_chager">Charge State Ignored</string>
    <string name="auto_clear_ignore_chager_desc">In The Charging State, The Screen-Off Action Is Delayed Until The Charging Is Completed.</string>
    <string name="settings_disable_selinux">Selinux Permissive Mode</string>
    <string name="settings_disable_selinux_desc">Switch Selinux To Permissive Mode (Some Software Is Called [Close Selinux]), Selinux Status Has No Effect On Scene, And Opening Permissive Mode May Crash And Restart!</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_wallpaper">Use Wallpaper</string>
    <string name="settings_theme_wallpaper_desc">Use The System Wallpaper As The Window Background, Showing A Translucent Interface</string>
    <string name="settings_debug_layer">Debug Window</string>
    <string name="settings_debug_layer_desc">Displays The Log Of The Scene'S Determination Of The Foreground Application Process</string>
    <string name="settings_help_icon">Hint Icon</string>
    <string name="settings_help_icon_desc">Display The Function Description Prompt (Question Mark) Icon Next To The Function Item</string>
    <string name="settings_auto_exit">Automatically Exit On Exception</string>
    <string name="settings_auto_exit_desc">Automatically End The Process When There Is An Abnormality In The Running Process To Avoid Stuck White Screen</string>
    <string name="settings_logcat_title">Error Log</string>
    <string name="settings_logcat_desc">When The Scene Crashes With An Error, Click The Button Below To Capture The Log Through Logcat And Send It To The Developer To Solve The Problem</string>
    <string name="settings_black_notification">Black Notification Background</string>
    <string name="settings_black_notification_desc">When The System Is In Night Mode, Show Scene'S Resident Notifications As A Black Background (No Need To Enable This Option Under Normal Circumstances)</string>
    <string name="menu_home">Overview</string>
    <string name="menu_paypal">Donate Reward</string>
    <string name="menu_scene_mode">Scene Mode</string>
    <string name="menu_app_scene">Application Scenarios</string>
    <string name="menu_system_scene">System Scene</string>
    <string name="menu_auto_click">Auto Click</string>
    <string name="menu_cpu_modes">Performance Configuration</string>
    <string name="menu_freeze">Applied Bias</string>
    <string name="menu_battery_stats">Power Consumption Statistics</string>
    <string name="menu_core_control">Cpu Control</string>
    <string name="menu_sundry">Miscellaneous Settings</string>
    <string name="menu_additional">Additional Features</string>
    <string name="menu_applictions">Application Management</string>
    <string name="menu_swap">Swap Settings</string>
    <string name="menu_battery">Charge Control</string>
    <string name="menu_charge">Charging Statistics</string>
    <string name="menu_custom_command">Custom Command</string>
    <string name="menu_processes">Process Management</string>
    <string name="menu_fps_chart">Frame Rate Recording</string>
    <string name="swap_current_state">Current Status:</string>
    <string name="swap_memory_info">Memory Info</string>
    <string name="swap_swappiness_desc">Note:\Nthe Higher The Value, The More Active The Use Of Swap. The Impact Of This Setting On The Fluency Is Difficult To Perceive. You Can Adjust It As Appropriate~</string>
    <string name="swap_swappiness">Swappiness</string>
    <string name="swap_zram">Zram</string>
    <string name="swap_zram_adjustment">Adjustment</string>
    <string name="swap_zram_desc">Description: Zram Is An Implementation Of Swap. When Available Memory Becomes Insufficient, Some Data In Memory Is Compressed. But The Cpu Will Be Busy Because Of This~</string>
    <string name="swap_swap">Swapfile</string>
    <string name="swap_create">Create</string>
    <string name="swap_start">Start Up</string>
    <string name="swap_stop">Closure</string>
    <string name="swap_delete">Delete</string>
    <string name="swap_use_loop">Mount As A Loopback Device</string>
    <string name="swap_swap_desc">Description: Swapfile Is Similar To Windows Virtual Memory, And The Swap Efficiency Is Limited By Disk Performance. Do Not Use This Function On Phones With Small Capacity Or Insufficient Space To Prevent The Flash Memory From Aging Too Fast!</string>
    <string name="swap_auto_start">Auto-Start At Boot (To Allow Scene To Auto-Start)</string>
    <string name="swap_zram_stat">Zram State</string>
    <string name="swap_outside_module">External Add-On (Magisk) Modules</string>
    <string name="swap_outside_module_desc">You Have Installed The Magisk Framework. It Is Recommended To Use The Latest Version Of The Add-On Module To Enhance The Reliability Of Swap Control. The Main Functions Of The Add-On Are As Follows:</string>
    <string name="swap_outside_effect1">1. Improve The Speed Of Restoring Zram And Swapfile Settings After Restarting The Phone</string>
    <string name="swap_outside_effect2">2. Adjust The Lmk Parameters According To The Ram Capacity Of The Device To Strengthen The Background Retention Capability</string>
    <string name="swap_outside_effect3">3. Adjust The Vm Parameters To Improve The Enthusiasm For Using Zram And Swapfile</string>
    <string name="swap_module_install_desc">After The Module Is Downloaded, Please Flash It In Magisk Manager And Restart Your Phone!</string>
    <string name="swap_zram_stat_desc">The Compression Ratio Of Zram Is Usually Between 20~45%</string>
    <string name="swap_zram_compact_algorithm">Compression Algorithm</string>
    <string name="scene_install_autoclick">Install Click</string>
    <string name="scene_install_autoclick_desc">When Installing Third-Party Applications, Automatically Click "Next" And "Install" For You</string>
    <string name="scene_install_skip_ad">Skip Ads</string>
    <string name="scene_install_skip_ad_desc">Automatically Click The "Skip" Button, Which Can Help You Automatically Skip Some Open-Screen Advertisements, But It Will Reduce System Performance And Cause Delays\N* Only Use It In Simplified Chinese To Have Better Results</string>
    <string name="scene_install_skip_ad_precise">Skip Ads+</string>
    <string name="scene_install_skip_ad_precise_desc">Use Some Button Data Recorded In The Cloud To Click The Special Skip Button</string>
    <string name="scene_install_skip_ad_warn">Advertising Traffic Is An Important Source Of Income For Some Software Developers/Businesses. If Your Time Is Not Very Tight, It Is Recommended That You Browse And Click On The Advertising Content You Like ^_^</string>
    <string name="lmk_optimize_desc">Let Scene Automatically Adjust The Lmk Parameters According To Your Ram Capacity, Thereby Enhancing Background Capabilities (May Cause Lag When Low Memory). If You Need To Restore, Please Turn Off This Option To Restart The Phone, If You Want To Set It Automatically After Power On, Please Allow The Toolbox To Start Automatically</string>
    <string name="lmk_optimize">Low Memory Optimization</string>
    <string name="low_memory_killer">Low Memory Killer</string>
</resources>