<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/layout_app_bar"
        layout="@layout/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/ListCardItem">

            <Switch
                android:id="@+id/settings_auto_install"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scene_install_autoclick" />

            <TextView
                style="@style/textSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/scene_install_autoclick_desc" />
        </LinearLayout>

        <LinearLayout style="@style/ListCardItem">

            <Switch
                android:id="@+id/settings_skip_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scene_install_skip_ad" />

            <TextView
                style="@style/textSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/scene_install_skip_ad_desc" />

            <Switch
                android:id="@+id/settings_skip_ad_precise"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scene_install_skip_ad_precise" />

            <TextView
                style="@style/textSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/scene_install_skip_ad_precise_desc" />

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="?android:colorAccent"
                android:lineHeight="20dp"
                android:text="@string/scene_install_skip_ad_warn"
                android:padding="8dp"
                style="@style/textSmall"
                android:background="@drawable/in_card_item_inactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>