<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingBottom="12dp"
        android:background="@drawable/krscript_item_ripple_inactive"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirm_title"
            style="@style/dialogTitle"
            android:text="@string/swap_outside_module" />
        <TextView
            style="@style/dialogDesc"
            android:id="@+id/confirm_message"
            android:text="@string/swap_outside_module_desc" />

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@style/dialogWarn"
            android:layout_marginBottom="4dp"
            android:text="@string/swap_outside_effect1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/dialogWarn"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:text="@string/swap_outside_effect2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/dialogWarn"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:text="@string/swap_outside_effect3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            style="@style/dialogDesc"
            android:alpha="0.8"
            android:textAlignment="center"
            android:text="@string/swap_module_install_desc" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/dialogCancelBtn"
            android:text="取消" />

        <Button
            android:layout_marginStart="8dp"
            android:id="@+id/btn_confirm"
            style="@style/dialogConfirmBtn"
            android:text="去下载" />
    </LinearLayout>

</LinearLayout>